<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_0"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/txtAgTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/background_03"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/main_game"
            android:textColor="@color/black_1"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/btnAgQuit"
            style="@android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_0"
            android:contentDescription="@drawable/icon_quit"
            android:padding="10dp"
            android:src="@drawable/icon_quit" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnAgPoke"
            style="@android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_2"
            android:padding="20dp"
            android:text="@string/game_poke"
            android:textColor="@color/black_1"
            android:textSize="60sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnAgRado"
            style="@android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_3"
            android:padding="20dp"
            android:text="@string/game_rado"
            android:textColor="@color/black_1"
            android:textSize="60sp"
            android:textStyle="bold" />
    </LinearLayout>

    <com.google.ads.AdView
        android:id="@+id/adAg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        app:adSize="BANNER"
        app:adUnitId="@string/ad_key"
        app:loadAdOnCreate="true" >
    </com.google.ads.AdView>

</FrameLayout>