<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_0"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/txtAsTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/background_03"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/app_name"
            android:textColor="@color/black_1"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/btnAsQuit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_0"
            android:contentDescription="@drawable/icon_quit"
            android:padding="10dp"
            android:src="@drawable/icon_quit" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageButton
                android:id="@+id/btnAsPhilology"
                android:layout_width="180dp"
                android:layout_height="130dp"
                android:background="@drawable/button_0"
                android:contentDescription="@drawable/icon_philology"
                android:paddingBottom="80dp"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:paddingTop="40dp"
                android:src="@drawable/icon_philology" />

            <TextView
                android:id="@+id/txtAsPhilology"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="10dp"
                android:text="@string/study_philology"
                android:textSize="30sp"
                android:textStyle="bold" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageButton
                android:id="@+id/btnAsMath"
                android:layout_width="180dp"
                android:layout_height="130dp"
                android:background="@drawable/button_1"
                android:contentDescription="@drawable/icon_math"
                android:paddingBottom="80dp"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:paddingTop="40dp"
                android:src="@drawable/icon_math" />

            <TextView
                android:id="@+id/txtAsMath"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="10dp"
                android:text="@string/study_math"
                android:textSize="30sp"
                android:textStyle="bold" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageButton
                android:id="@+id/btnAsKnowledge"
                android:layout_width="180dp"
                android:layout_height="130dp"
                android:background="@drawable/button_2"
                android:contentDescription="@drawable/icon_math"
                android:paddingBottom="80dp"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:paddingTop="40dp"
                android:src="@drawable/icon_help" />

            <TextView
                android:id="@+id/txtAsKnowledge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="10dp"
                android:text="@string/study_knowledge"
                android:textSize="30sp"
                android:textStyle="bold" />
        </FrameLayout>
    </LinearLayout>

    <com.google.ads.AdView
        android:id="@+id/adAsp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:adSize="BANNER"
        app:adUnitId="@string/ad_key"
        app:loadAdOnCreate="true" >
    </com.google.ads.AdView>

</LinearLayout>