<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_0"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/txtAskTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/background_03"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/study_knowledge"
            android:textColor="@color/black_1"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/btnAskQuit"
            style="@android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_0"
            android:contentDescription="@drawable/icon_quit"
            android:padding="10dp"
            android:src="@drawable/icon_quit" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtAskQuestion"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/background_11"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnAskSubmit0"
            style="@android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_0"
            android:padding="5dp"
            android:text="@string/philology_join"
            android:textColor="@color/black_1"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnAskSubmit1"
            style="@android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_1"
            android:padding="5dp"
            android:text="@string/philology_join"
            android:textColor="@color/black_1"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnAskSubmit2"
            style="@android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_2"
            android:padding="5dp"
            android:text="@string/philology_join"
            android:textColor="@color/black_1"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnAskSubmit3"
            style="@android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_3"
            android:padding="5dp"
            android:text="@string/philology_join"
            android:textColor="@color/black_1"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <com.google.ads.AdView
        android:id="@+id/adAsk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:adSize="BANNER"
        app:adUnitId="@string/ad_key"
        app:loadAdOnCreate="true" >
    </com.google.ads.AdView>

</LinearLayout>