<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <FrameLayout
        android:id="@+id/frmAgrSurface"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/lnrAgrGameOver"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtAgrGameOver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:background="@drawable/background_03"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/game_over"
                android:textColor="@color/black_1"
                android:textSize="50sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" >

                <ImageButton
                    android:id="@+id/btnAgrQuit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_00"
                    android:contentDescription="@drawable/icon_quit"
                    android:padding="20dp"
                    android:src="@drawable/icon_quit" />

                <ImageButton
                    android:id="@+id/btnAgrReplay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_05"
                    android:contentDescription="@drawable/icon_replay"
                    android:padding="20dp"
                    android:src="@drawable/icon_replay" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtAgrLoading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_loading"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <com.google.ads.AdView
        android:id="@+id/adAgr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        app:adSize="BANNER"
        app:adUnitId="@string/ad_key"
        app:loadAdOnCreate="true" >
    </com.google.ads.AdView>

</FrameLayout>