<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_0"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtPhilologySpeakTitle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/background_03"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/philology_speak"
            android:textColor="@color/black_1"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/btnPhilologySpeakReturn"
            style="@android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_0"
            android:contentDescription="@drawable/icon_quit"
            android:padding="10dp"
            android:src="@drawable/icon_quit" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imgPhilologySpeakContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.00"
        android:contentDescription="@drawable/ic_launcher"
        android:padding="10dp"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/txtPhilologySpeakContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_05"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:textStyle="bold" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageButton
            android:id="@+id/btnPhilologySpeakBack"
            style="@android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_0"
            android:contentDescription="@drawable/icon_left"
            android:padding="20dp"
            android:src="@drawable/icon_left" />

        <ImageButton
            android:id="@+id/btnPhilologySpeakSpeak"
            style="@android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_2"
            android:contentDescription="@drawable/icon_speaker"
            android:padding="20dp"
            android:src="@drawable/icon_speaker" />

        <ImageButton
            android:id="@+id/btnPhilologySpeakNext"
            style="@android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@drawable/button_3"
            android:contentDescription="@drawable/icon_right"
            android:padding="20dp"
            android:src="@drawable/icon_right" />
    </FrameLayout>

    <com.google.ads.AdView
        android:id="@+id/ad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        app:adSize="BANNER"
        app:adUnitId="@string/ad_key"
        app:loadAdOnCreate="true" >
    </com.google.ads.AdView>

</LinearLayout>