<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.dsa.behoclopmot.ActivityMain" >

    <com.dsa.behoclopmot.BouncingImageView
        android:id="@+id/bouncingImageView0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/balloon_0" />

    <com.dsa.behoclopmot.BouncingImageView
        android:id="@+id/bouncingImageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/balloon_1" />

    <com.dsa.behoclopmot.BouncingImageView
        android:id="@+id/bouncingImageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/balloon_2" />

    <com.dsa.behoclopmot.BouncingImageView
        android:id="@+id/bouncingImageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/balloon_3" />

    <com.dsa.behoclopmot.BouncingImageView
        android:id="@+id/bouncingImageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/balloon_4" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <ImageButton
            android:id="@+id/btnMainQuit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_0"
            android:contentDescription="@drawable/icon_quit"
            android:padding="10dp"
            android:src="@drawable/icon_quit" />

        <ImageButton
            android:id="@+id/btnMainRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_3"
            android:contentDescription="@drawable/icon_quit"
            android:padding="10dp"
            android:src="@drawable/icon_star" />

        <ImageButton
            android:id="@+id/btnMainApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_4"
            android:contentDescription="@drawable/icon_quit"
            android:padding="10dp"
            android:src="@drawable/icon_app" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp" >

        <FrameLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content" >

            <ImageButton
                android:id="@+id/btnMainStudy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_1"
                android:contentDescription="@drawable/icon_philology"
                android:paddingBottom="60dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="20dp"
                android:src="@drawable/icon_philology" />

            <TextView
                android:id="@+id/txtMainStudy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="10dp"
                android:text="@string/main_study"
                android:textSize="30sp"
                android:textStyle="bold" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content" >

            <ImageButton
                android:id="@+id/btnMainGame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_2"
                android:contentDescription="@drawable/icon_game"
                android:paddingBottom="60dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="20dp"
                android:src="@drawable/icon_game" />

            <TextView
                android:id="@+id/txtMainGame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="10dp"
                android:text="@string/main_game"
                android:textSize="30sp"
                android:textStyle="bold" />
        </FrameLayout>
    </LinearLayout>

    <com.google.ads.AdView
        android:id="@+id/adAsp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        app:adSize="BANNER"
        app:adUnitId="@string/ad_key"
        app:loadAdOnCreate="true" >
    </com.google.ads.AdView>

</FrameLayout>